// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders the UI snapshot correctly 1`] = `
<div
  className="chakra-tabs css-19sk4h4"
  data-testid="ds-tabs"
  id="basic"
>
  <div
    className="css-l3f8vc"
  >
    <button
      aria-label="Scroll tabs left"
      className="chakra-button css-1c0zt5w"
      data-testid="ds-button"
      id="basic-tabs-previous"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="basic-tabs-previous-icon"
        role="img"
        title="previous arrow"
      />
    </button>
    <div
      className="css-0"
    >
      <div
        aria-orientation="horizontal"
        className="chakra-tabs__tablist css-k008qs"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-controls="tabs-basic--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-basic--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tom Nook
        </button>
        <button
          aria-controls="tabs-basic--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-basic--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Isabelle
        </button>
        <button
          aria-controls="tabs-basic--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-basic--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          K.K. Slider
        </button>
      </div>
    </div>
    <button
      aria-label="Scroll tabs right"
      className="chakra-button css-rvrlhv"
      data-testid="ds-button"
      id="basic-tabs-next"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="basic-tabs-next-icon"
        role="img"
        title="next arrow"
      />
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="tabs-basic--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="tabs-basic--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      <p>
        Tom Nook, 
        <b>
          known in Japan as Tanukichi
        </b>
        , is a fictional character in the Animal Crossing series who operates the village store.
      </p>
    </div>
    <div
      aria-labelledby="tabs-basic--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "Isabelle, known as Shizue in Japan, is a fictional character from the Animal Crossing series of video games. She is a kindly Shih Tzu that debuted in the 2012 release Animal Crossing: New Leaf, where she serves as the secretary to the player character.",
        }
      }
      hidden={true}
      id="tabs-basic--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="tabs-basic--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "<p>Totakeke, more commonly known as <b>K.K. Slider or K.K.</b>, is a fictional character within the Animal Crossing franchise. One of the franchise's most popular characters, he debuted in the title Animal Crossing, and has appeared in every installment since.</p>",
        }
      }
      hidden={true}
      id="tabs-basic--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Tabs renders the UI snapshot correctly 2`] = `
<div
  className="chakra-tabs css-mz7vzl"
  data-testid="ds-tabs"
  id="chakra"
>
  <div
    className="css-l3f8vc"
  >
    <button
      aria-label="Scroll tabs left"
      className="chakra-button css-1c0zt5w"
      data-testid="ds-button"
      id="chakra-tabs-previous"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="chakra-tabs-previous-icon"
        role="img"
        title="previous arrow"
      />
    </button>
    <div
      className="css-0"
    >
      <div
        aria-orientation="horizontal"
        className="chakra-tabs__tablist css-k008qs"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-controls="tabs-chakra--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-chakra--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tom Nook
        </button>
        <button
          aria-controls="tabs-chakra--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-chakra--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Isabelle
        </button>
        <button
          aria-controls="tabs-chakra--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-chakra--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          K.K. Slider
        </button>
      </div>
    </div>
    <button
      aria-label="Scroll tabs right"
      className="chakra-button css-rvrlhv"
      data-testid="ds-button"
      id="chakra-tabs-next"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="chakra-tabs-next-icon"
        role="img"
        title="next arrow"
      />
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="tabs-chakra--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="tabs-chakra--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      <p>
        Tom Nook, 
        <b>
          known in Japan as Tanukichi
        </b>
        , is a fictional character in the Animal Crossing series who operates the village store.
      </p>
    </div>
    <div
      aria-labelledby="tabs-chakra--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "Isabelle, known as Shizue in Japan, is a fictional character from the Animal Crossing series of video games. She is a kindly Shih Tzu that debuted in the 2012 release Animal Crossing: New Leaf, where she serves as the secretary to the player character.",
        }
      }
      hidden={true}
      id="tabs-chakra--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="tabs-chakra--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "<p>Totakeke, more commonly known as <b>K.K. Slider or K.K.</b>, is a fictional character within the Animal Crossing franchise. One of the franchise's most popular characters, he debuted in the title Animal Crossing, and has appeared in every installment since.</p>",
        }
      }
      hidden={true}
      id="tabs-chakra--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Tabs renders the UI snapshot correctly 3`] = `
<div
  className="chakra-tabs css-19sk4h4"
  data-testid="props"
  id="props"
>
  <div
    className="css-l3f8vc"
  >
    <button
      aria-label="Scroll tabs left"
      className="chakra-button css-1c0zt5w"
      data-testid="ds-button"
      id="props-tabs-previous"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="props-tabs-previous-icon"
        role="img"
        title="previous arrow"
      />
    </button>
    <div
      className="css-0"
    >
      <div
        aria-orientation="horizontal"
        className="chakra-tabs__tablist css-k008qs"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-controls="tabs-props--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-props--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Tom Nook
        </button>
        <button
          aria-controls="tabs-props--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-props--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          Isabelle
        </button>
        <button
          aria-controls="tabs-props--tabpanel--1"
          aria-disabled={false}
          aria-selected={false}
          className="chakra-tabs__tab css-d6a5ah"
          disabled={false}
          id="tabs-props--tab--1"
          onClick={[Function]}
          onFocus={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          K.K. Slider
        </button>
      </div>
    </div>
    <button
      aria-label="Scroll tabs right"
      className="chakra-button css-rvrlhv"
      data-testid="ds-button"
      id="props-tabs-next"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgArrow"
        focusable={false}
        id="props-tabs-next-icon"
        role="img"
        title="next arrow"
      />
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="tabs-props--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="tabs-props--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      <p>
        Tom Nook, 
        <b>
          known in Japan as Tanukichi
        </b>
        , is a fictional character in the Animal Crossing series who operates the village store.
      </p>
    </div>
    <div
      aria-labelledby="tabs-props--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "Isabelle, known as Shizue in Japan, is a fictional character from the Animal Crossing series of video games. She is a kindly Shih Tzu that debuted in the 2012 release Animal Crossing: New Leaf, where she serves as the secretary to the player character.",
        }
      }
      hidden={true}
      id="tabs-props--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="tabs-props--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      dangerouslySetInnerHTML={
        {
          "__html": "<p>Totakeke, more commonly known as <b>K.K. Slider or K.K.</b>, is a fictional character within the Animal Crossing franchise. One of the franchise's most popular characters, he debuted in the title Animal Crossing, and has appeared in every installment since.</p>",
        }
      }
      hidden={true}
      id="tabs-props--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;
